tests/snapshots/everything_js__es2015_module-10.snap
---
source: tests/everything_js.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Expr(
                    Sequence(
                        [
                            Lit(
                                Number(
                                    "0",
                                ),
                            ),
                            Lit(
                                Number(
                                    "1",
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ),
    ),
]
