tests/snapshots/everything_js__es2015_module-2.snap
---
source: tests/everything_js.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Decl(
                    Func(
                        Func {
                            id: None,
                            params: [],
                            body: FuncBody(
                                [],
                            ),
                            generator: false,
                            is_async: false,
                        },
                    ),
                ),
            ),
        ),
    ),
]
