tests/snapshots/everything_js__es2015_module-3.snap
---
source: tests/everything_js.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Decl(
                    Func(
                        Func {
                            id: Some(
                                Ident {
                                    name: "i16",
                                },
                            ),
                            params: [],
                            body: FuncBody(
                                [],
                            ),
                            generator: true,
                            is_async: false,
                        },
                    ),
                ),
            ),
        ),
    ),
]
