tests/snapshots/everything_js__es2015_module-7.snap
---
source: tests/everything_js.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Decl(
                    Class(
                        Class {
                            id: None,
                            super_class: None,
                            body: ClassBody(
                                [],
                            ),
                        },
                    ),
                ),
            ),
        ),
    ),
]
