tests/snapshots/everything_js__es2015_module-8.snap
---
source: tests/everything_js.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Expr(
                    Assign(
                        AssignExpr {
                            operator: Equal,
                            left: Expr(
                                Ident(
                                    Ident {
                                        name: "x",
                                    },
                                ),
                            ),
                            right: Lit(
                                Number(
                                    "0",
                                ),
                            ),
                        },
                    ),
                ),
            ),
        ),
    ),
]
