tests/snapshots/everything_js__es2015_module-9.snap
---
source: tests/everything_js.rs
expression: res
---
[
    Decl(
        Export(
            Default(
                Expr(
                    Lit(
                        Number(
                            "0",
                        ),
                    ),
                ),
            ),
        ),
    ),
]
